objects/EUR_CRM_Brand_Security_Infringement__c.object
<CustomObject>
    <description>PREU Data Model - GMA / Counterfeit products reporting tool</description>
    <fields>
        <fullName>EUR_CRM_Alcohol_volume__c</fullName>
        <label>Alcohol volume (%)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10.5%</fullName>
                </value>
                <value>
                    <fullName>11.0%</fullName>
                </value>
                <value>
                    <fullName>11.5%</fullName>
                </value>
                <value>
                    <fullName>12.0%</fullName>
                </value>
                <value>
                    <fullName>12.5%</fullName>
                </value>
                <value>
                    <fullName>13.0%</fullName>
                </value>
                <value>
                    <fullName>13.5%</fullName>
                </value>
                <value>
                    <fullName>14.0%</fullName>
                </value>
                <value>
                    <fullName>14.5%</fullName>
                </value>
                <value>
                    <fullName>14.8%</fullName>
                </value>
                <value>
                    <fullName>16.0%</fullName>
                </value>
                <value>
                    <fullName>17.5%</fullName>
                </value>
                <value>
                    <fullName>18.0%</fullName>
                </value>
                <value>
                    <fullName>19.5%</fullName>
                </value>
                <value>
                    <fullName>20.0%</fullName>
                </value>
                <value>
                    <fullName>21.0%</fullName>
                </value>
                <value>
                    <fullName>25.0%</fullName>
                </value>
                <value>
                    <fullName>26.5%</fullName>
                </value>
                <value>
                    <fullName>30.0%</fullName>
                </value>
                <value>
                    <fullName>35.0%</fullName>
                </value>
                <value>
                    <fullName>37.0%</fullName>
                </value>
                <value>
                    <fullName>37.5%</fullName>
                </value>
                <value>
                    <fullName>38.0%</fullName>
                </value>
                <value>
                    <fullName>40.0%</fullName>
                </value>
                <value>
                    <fullName>42.0%</fullName>
                </value>
                <value>
                    <fullName>43.0%</fullName>
                </value>
                <value>
                    <fullName>45.0%</fullName>
                </value>
                <value>
                    <fullName>47.0%</fullName>
                </value>
                <value>
                    <fullName>48.0%</fullName>
                </value>
                <value>
                    <fullName>50.0%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Back_label_part_number__c</fullName>
        <label>Back-label part number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Bottle_code__c</fullName>
        <inlineHelpText>for Chivas only</inlineHelpText>
        <label>Bottle code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Bottle_size_cl__c</fullName>
        <label>Bottle size (cl)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>37.5</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>76</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>113</fullName>
                </value>
                <value>
                    <fullName>114</fullName>
                </value>
                <value>
                    <fullName>125</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>175</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
                <value>
                    <fullName>375</fullName>
                </value>
                <value>
                    <fullName>378</fullName>
                </value>
                <value>
                    <fullName>450</fullName>
                </value>
                <value>
                    <fullName>800</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality__c</fullName>
        <label>Brand Quality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>100 PIPERS</fullName>
                </value>
                <value>
                    <fullName>1801</fullName>
                </value>
                <value>
                    <fullName>ABERLOUR 100 %</fullName>
                </value>
                <value>
                    <fullName>ABERLOUR 10 YO</fullName>
                </value>
                <value>
                    <fullName>ABERLOUR 12 YO</fullName>
                </value>
                <value>
                    <fullName>ABERLOUR 15 YO</fullName>
                </value>
                <value>
                    <fullName>ABERLOUR 21 YO</fullName>
                </value>
                <value>
                    <fullName>ABERLOUR ABUNDAH</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT 100</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT 72</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT BERRI ACAI</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT CITRON</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT ELYX</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT EXPOSURE</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT GLIMMER</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT GLIMMER CITRON</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT GRAPEVINE</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT ILLUSION</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT KURANT</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT LEVEL</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT LONDON</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT MANDRIN</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT MANGO</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT MARIO WAGNER</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT MIAMI</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT MODE</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT ORIENT APPLE</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT ORIGINAL</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT PEACH</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT PEARS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Case_code__c</fullName>
        <label>Case code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_City__c</fullName>
        <formula>EUR_CRM_Outlet_Name__r.EUR_CRM_City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <description>Naming convention of the Record Type for the Outlet should not have &quot;EUR_CRM&quot; . It should be &quot;EUR_[2 Letter Country Code]_&quot;</description>
        <formula>RIGHT(LEFT( EUR_CRM_Outlet_Name__r.RecordType.DeveloperName, 6) , 2)</formula>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_where_sighted__c</fullName>
        <label>Country where sighted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABU DHABI</fullName>
                </value>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>AFRICA</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BAKER ISLAND</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BASSAS DA INDIA</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BONAIRE</fullName>
                </value>
                <value>
                    <fullName>BOSNIA-HERZEGOVINA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_County__c</fullName>
        <formula>TEXT( EUR_CRM_Outlet_Name__r.EUR_CRM_County__c )</formula>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Date_when_sighted__c</fullName>
        <description>Date when the record is saved</description>
        <label>Date when sighted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Email_of_the_reporter__c</fullName>
        <formula>EUR_CRM_Reporter_Name__r.Email</formula>
        <label>Email of the reporter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Estimated_quantity_in_bottles__c</fullName>
        <label>Estimated quantity in bottles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Formula_Data_Entry_ID__c</fullName>
        <description>If Account Record type is under EMEA then Data Entry ID is BSEurope, otherwise BSSSA</description>
        <formula>IF( 
   OR(
       EUR_CRM_Country_Code__c = &quot;AO&quot;, 
       EUR_CRM_Country_Code__c = &quot;KE&quot;
   ), 
   &quot;CHIVAS\\BSSSA&quot;, 
   &quot;CHIVAS\\BSEurope&quot;
)</formula>
        <label>Data Entry ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_How_was_the_estimate_derived__c</fullName>
        <label>How was the estimate derived?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Importer_where_known__c</fullName>
        <label>Importer (where known)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_LOT_number__c</fullName>
        <inlineHelpText>or confirm decoded</inlineHelpText>
        <label>LOT number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Other_number__c</fullName>
        <inlineHelpText>including Date and Time of production</inlineHelpText>
        <label>Other number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Outlet_Address__c</fullName>
        <formula>EUR_CRM_Outlet_Name__r.EUR_CRM_Street__c &amp; &quot; &quot; &amp;  TEXT(EUR_CRM_Outlet_Name__r.EUR_CRM_House_Number__c) &amp; &quot; &quot; &amp;   EUR_CRM_Outlet_Name__r.EUR_CRM_Postal_Code__c &amp; &quot; &quot; &amp;   EUR_CRM_Outlet_Name__r.EUR_CRM_City__c</formula>
        <label>Outlet Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Outlet_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Name</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipName>Brand_Securities_Account_Outlet_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Outlet_type__c</fullName>
        <label>Outlet type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DUTY FREE</fullName>
                </value>
                <value>
                    <fullName>IN TRANSIT</fullName>
                </value>
                <value>
                    <fullName>MANUFACTURING SITE</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>RETAIL OFF</fullName>
                </value>
                <value>
                    <fullName>RETAIL ON</fullName>
                </value>
                <value>
                    <fullName>STORAGE</fullName>
                </value>
                <value>
                    <fullName>TRAVEL RETAIL</fullName>
                </value>
                <value>
                    <fullName>WAREHOUSE</fullName>
                </value>
                <value>
                    <fullName>WHOLESALE</fullName>
                </value>
                <value>
                    <fullName>WHOLESALER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Postal_Code__c</fullName>
        <formula>EUR_CRM_Outlet_Name__r.EUR_CRM_Postal_Code__c</formula>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Price_per_bottle__c</fullName>
        <inlineHelpText>If price not available, enter 0</inlineHelpText>
        <label>Price per bottle</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Price_per_glass_shot__c</fullName>
        <inlineHelpText>If price not available, enter 0</inlineHelpText>
        <label>Price per glass / shot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Quantity_sighted_in_bottles__c</fullName>
        <label>Quantity sighted in bottles</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Reporter_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporter Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Brand_Securities_User_Report_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sanctioned_for_PR_Brand_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sanctioned for PR Brand Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Street__c</fullName>
        <formula>EUR_CRM_Outlet_Name__r.EUR_CRM_Street__c</formula>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit ID</label>
        <referenceTo>EUR_CRM_Visit__c</referenceTo>
        <relationshipName>Brand_Security_Infringements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Why_counterfeit_is_suspected__c</fullName>
        <label>Why counterfeit is suspected?</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Brand Security Infringement (EU)</label>
    <listViews>
        <fullName>EUR_BG_BSI</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Country_where_sighted__c</columns>
        <columns>EUR_CRM_Sanctioned_for_PR_Brand_Security__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Country_where_sighted__c</field>
            <operation>equals</operation>
            <value>BULGARIA</value>
        </filters>
        <label>EUR BG BSI</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CH_BSI</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Country_where_sighted__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Country_where_sighted__c</field>
            <operation>equals</operation>
            <value>SWITZERLAND</value>
        </filters>
        <label>EUR CH BSI</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DE_All_BSI</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Country_where_sighted__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Country_Code__c</field>
            <operation>equals</operation>
            <value>DE</value>
        </filters>
        <label>EUR DE All BSI</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DK_BSI</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Country_where_sighted__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Country_where_sighted__c</field>
            <operation>equals</operation>
            <value>DENMARK</value>
        </filters>
        <label>EUR DK BSI</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_MA_BSI</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Outlet_Name__c</columns>
        <columns>EUR_CRM_Country_where_sighted__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Country_where_sighted__c</field>
            <operation>equals</operation>
            <value>MOROCCO</value>
        </filters>
        <label>EUR MA BSI</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_MA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>BSR-{YY}{MM}{DD}-{000000}</displayFormat>
        <label>Brand Security Infringement No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Security Infringement (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_Brand_Security_Infringement_Counterfeit</fullName>
        <active>true</active>
        <label>EUR Brand Security Infringement - Counterfeit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_Brand_Security_Infringement_GMA</fullName>
        <active>true</active>
        <label>EUR Brand Security Infringement - GMA</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>EUR_Bottle_Code_numeric_only</fullName>
        <active>true</active>
        <errorConditionFormula>IF(NOT(ISBLANK(EUR_CRM_Bottle_code__c)),NOT(ISNUMBER( EUR_CRM_Bottle_code__c )), NULL)</errorConditionFormula>
        <errorDisplayField>EUR_CRM_Bottle_code__c</errorDisplayField>
        <errorMessage>Bottle code must be numeric</errorMessage>
    </validationRules>
</CustomObject>